--- a/contactus.html
+++ b/contactus.html
@@ -113,7 +113,7 @@
                                         <div class=" card-contactus sub-title">Chief Coordinator</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-phone"></i></a></li>
+                                            <li><a class="icoFacebook" href="tel:+919861414972"><i class="fa fa-phone"></i></a></li>
                                             <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-instagram"></i></a></li>
                                         </ul>
                                     </div>
@@ -126,7 +126,7 @@
                                         <div class=" card-contactus sub-title">Convenor</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
+                                            <li><a class="icoFacebook" href="tel:+919861382079"><i class="fa fa-phone"></i></a></li>
                                             <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-instagram"></i></a></li>
                                         </ul>
                                     </div>
@@ -681,7 +681,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/team_btech/ShibaPrasadMallick.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_btech/shiba_prasad_mallick.jpeg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Shiba Prasad Mallick</div>
                                         <div class=" card-contactus sub-title">B.Tech CSE</div>
