--- a/gallery.html
+++ b/gallery.html
@@ -89,19 +89,19 @@
 
                         <!-- Text at center of ground -->
                         <div id="t-logo">
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(2px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(4px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(6px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(8px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(10px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(12px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(1.1px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(3.3px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(5.5px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(7.7px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(9.9px);"></div>
-                            <div style="position: absolute;background-image: url('images/tech.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(11.11px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(2px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(4px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(6px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(8px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(10px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(12px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(1.1px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(3.3px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(5.5px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(7.7px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(9.9px);"></div>
+                            <div style="position: absolute;background-image: url('images/tech2.png');height: 340px;width: 240px;background-size: contain;background-repeat: no-repeat;transform: translateZ(11.11px);"></div>
                             <div style="position: absolute;background:linear-gradient(to bottom, rgb(22,89,218),rgb(11,48,76));height: 120px;width: 10px;background-size: contain;background-repeat: no-repeat;transform:  translate3d(105px, 0px, 5px) rotateY(-90deg);"></div>
 
                         </div>
