--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
     />
     <meta name="description" content="The Techno-Cultural fest of the department of CSEA, IGIT Sarang." />
     <meta name="author" content="Yashobanta Kumar Behera">
+    <meta rel="preload" href="images/tech2.png" as="image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
