theme color added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="msvalidate.01" content="F0EB8193BFCE1E364ACB8E26FD32DCDD" />
+    <meta name="theme-color" content="#0a0a0a" />
     <meta name="keywords" content="IGIT TECHNOVATION,IGITTECHNOVATION,technovation,technovation 2020,igit tech,igittechnovation,technovation 4.0,technovation sarang,igit,sarang,tech-fest,tech fest,techno-cultural-fest,igit sarang,Indira Gandhi Institute of Technology,home technovation,2020 technovation"
     />
     <meta name="description" content="The Techno-Cultural fest of the department of CSEA, IGIT Sarang." />
