--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="IGIT TECHNOVATION,IGITTECHNOVATION,technovation,technovation 2020,igit tech,igittechnovation,technovation 4.0,technovation sarang,igit,sarang,tech-fest,tech fest,techno-cultural-fest,igit sarang,Indira Gandhi Institute of Technology,home technovation,2020 technovation"
     />
-    <meta name="theme-color" content="#0a0a0a" />
+    <meta name="theme-color" content="#1f1f1f" />
     <meta name="description" content="The Techno-Cultural fest of the department of CSEA, IGIT Sarang." />
     <meta name="author" content="Yashobanta Kumar Behera">
     <meta rel="preload" href="images/tech2.png" as="image" />
