--- a/contactus.html
+++ b/contactus.html
@@ -795,9 +795,9 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/team_mca/Pragyanparamitamadali.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/gayatri_sahoo.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
-                                        <div class=" card-contactus title">Pragya Paramita</div>
+                                        <div class=" card-contactus title">Gayatri Sahoo</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
@@ -1067,9 +1067,9 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="images/team_mca/suryakantiparhi.jpg" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/arpita_mallik.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
-                                        <div class=" card-contactus title">Suryakanti Padhi</div>
+                                        <div class=" card-contactus title">Arpita Mallik</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
