--- a/events.html
+++ b/events.html
@@ -174,7 +174,7 @@
                                 <div class="item3 "></div>
                                 <div class="item4 "></div>
                                 <div class="item5">
-                                    <img class="item-img" src="images/cultural/mrnmrs_tech.jpg">
+                                    <img class="item-img" src="images/cultural/mr_and_miss_tech.jpeg">
                                     <div class="item9"></div>
                                     <div class="item10"><i class="fa fa-clock-o"></i></div>
                                 </div>
