some minor changes

--- a/events.html
+++ b/events.html
@@ -190,23 +190,45 @@
                                 <div class="ui-widget-content title sticky-top">Mr. and Miss Technovation</div>
                                 <div class="ui-widget-content content">
                                     <p></p>
-                                    <p class="para-dlg-1"><i>“Success is a series of small wins”</i></p>
+                                    <p class="para-dlg-1"><i>“Success is a series of small wins”<a href="javascript:void(0)"></a></i></p>
                                     <p></p>
                                     <p class="para-dlg-2">The most awaited, charismatic, Mr. and Miss. Technovation is back with a bang. An online event where you will be asked to send a picture of yours And the participant with the highest number of likes will qualify to
                                         the next round followed by some other interesting rounds.</p>
                                     <p></p>
                                     <p class="para-dlg-2">The difference between ordinary and extraordinary is that little <b>“extra”</b>. Go that extra mile, Make it happen . Cause no one is you and that is your superpower</p>
-                                    <p class=" para-dlg-3">Rules:</p>
+                                    <p></p>
+                                    <p class=" para-dlg-3">Rules and Regulations:</p>
+                                    <ol class=" para-dlg-4">
+                                        <li>The contestants need to send their photos along with their full name &amp; college name to <a href="mailto:mrandmisstechnovation2020@gmail.com">mrandmisstechnovation2020@gmail.com</a></li>
+                                        <li>Photo size should be less than 10 MB and it must not have any filter effects or edits.</li>
+                                        <li>Selfies are not allowed in the competition</li>
+                                        <li>Use of auto liker and auto commenter is not allowed. Participants using such means will be disqualified.</li>
+                                        <li>Photo should be decent where the participant should be properly dressed. </li>
+                                        <li>Only a single picture without any collage shall be taken into consideration. N. B. – If any of the rules is not followed by any of the contestants they will be disqualified. </li>
+                                    </ol>
+
+
+
+
+                                    <p class=" para-dlg-3">Procedure:</p>
                                     <ul class=" para-dlg-4">
-                                        <li>The picture should not have any effect and it should be less than 10mb</li>
-                                        <li>Top participants from boys and from girls will be selected on the basis of the number of likes they get.</li>
-                                        <li>The further rounds will be with many twists and turns.</li>
-                                        <li>Winner of the event will be decided based on the further rounds.</li>
-                                        <li>Mr. and Miss Technovation winner will get exciting prizes.</li>
-                                        <li>Use of auto likers is not allowed</li>
-                                        <li>Participants using autolikers will be disqualified.</li>
-                                        <li>Winners of the first round will be announced on the page.</li>
+                                        <li>The contestants will send their photo on the email ID provided above.</li>
+                                        <li>The pics sent by the contestants will be posted in Mr and Miss Technovation page.</li>
+                                        <li>The jury shall consider the likes of those persons who like the pic as well as the Mr & Miss Technovation page.</li>
+                                        <li>Top 16 participants (8 boys and 8 girls inclusively) getting the maximum likes for their pic on the page will be selected for the 2nd round to be conducted at IGIT, Sarang during Technovation 2020.</li>
+                                        <li>Mr & Miss Fame (the boy and the girl who will be the Highest like holder) will get some bonus point in this competition.</li>
+                                        <li>In the 2nd round the participants will face the quiz test and self performance (Dancing , singing or Solo Act) and PI.</li>
+                                        <li>Among all the 16 participants, 10 (5 boys and 5 girls) will be selected for the final round.</li>
+                                        <li>Winner of Mr. Technovation and Miss Technovation will be decided based on the participants' performance in the Final round (Ramp Walk).</li>
+                                        <li>Do check the page regularly to stay updated with the event and related posts.</li>
                                     </ul>
+                                    <p></p>
+                                    <p class=" para-dlg-2">For any queries, please contact:-</p>
+                                    <ol class=" para-dlg-4">
+                                        <li>Abhijit Panda - <a href="tel:+918114957735">8114957735</a></li>
+                                        <li>Moumita Panda - <a href="tel:+918917242677">8917242677</a></li>
+                                    </ol>
+
                                 </div>
                             </div>
                         </div>
