event detail added(Encantador)

--- a/events.html
+++ b/events.html
@@ -285,9 +285,10 @@
                                         <li>There is a team event where team will consist of 6 - 9members.</li>
                                         <li>Every team will have to base their performance on a specific theme.</li>
                                         <li>Every team will be given a time limit of maximum 3 minutes.</li>
-                                        <li>Every team will have to bring its own music track for the walk.</li>
-                                        <li>Every team will be required to face interaction via questions from the audience after the walk.</li>
+                                        <li>Negative marking exists for exceeding the time limit.</li>
+                                        <li>Teams need to submit their own music tracks for the walk in advance, failing in which may lead to disqualification.</li>
                                         <li>Each theme can be taken up by a maximum of 2 teams on a first come first serve basis.</li>
+                                        <li>Decision of the judges will be final and binding.</li>
                                     </ul>
                                     <p class=" para-dlg-3">Judgement Criteria:</p>
                                     <p class=" para-dlg-2">The teams will be judged on the basis of the following:</p>
