event detail (Encantador)

--- a/events.html
+++ b/events.html
@@ -265,19 +265,26 @@
                                 <br>
                                 <div class="ui-widget-content content">
 
-                                    <p></p>
-                                    <p class="para-dlg-1"><i>“Being well dressed hasn’t much to do with having good clothes. It’s a question of good balance and good common sense. So in order to be irreplaceable one must always be different."</i></p>
-                                    <p class=" para-dlg-2">
-                                        So wake up beauties its time to beast for we are back with the 4th edition of Encantador, the fashion show.
+                                    <p>
+                                        <a href="javascript:void(0)"></a>
                                     </p>
-                                    <p class=" para-dlg-2">Be the designer of your own and let the fire inside you burn brighter than the fire around u.</p>
+                                    <p class="para-dlg-1"><i>Being well dressed hasn’t much to do with having good clothes. It’s a question of good balance and good common sense. So in order to be irreplaceable one must always be different.</i></p>
+                                    <p class=" para-dlg-2">
+                                        So wake up beauties and hunks, its time to beast ,for we are back with the 4th edition of Encantador, the fashion show. Be the designer of your own and let the fire inside you burn brighter than the fire around you.
+                                    </p>
                                     <p class=" para-dlg-3">Themes:</p>
                                     <ul class=" para-dlg-4">
                                         <li>Bollywood</li>
-                                        <li>Retro</li>
-                                        <li>Tribal</li>
                                         <li>Wizardry</li>
-                                        <li>Exotic</li>
+                                        <li>Colors of the sea</li>
+                                        <li>Animals in cage</li>
+                                        <li>Shades of karma "zodiac"Exotic</li>
+                                        <li>Palace of illusions </li>
+                                        <li>Garbage bag gala</li>
+                                        <li>Diversity of India</li>
+                                        <li>Candy Land</li>
+                                        <li>K-Pop</li>
+
                                     </ul>
 
                                     <p class=" para-dlg-3">Rules:</p>
@@ -285,10 +292,8 @@
                                         <li>There is a team event where team will consist of 6 - 9members.</li>
                                         <li>Every team will have to base their performance on a specific theme.</li>
                                         <li>Every team will be given a time limit of maximum 3 minutes.</li>
-                                        <li>Negative marking exists for exceeding the time limit.</li>
-                                        <li>Teams need to submit their own music tracks for the walk in advance, failing in which may lead to disqualification.</li>
-                                        <li>Each theme can be taken up by a maximum of 2 teams on a first come first serve basis.</li>
-                                        <li>Decision of the judges will be final and binding.</li>
+                                        <li>Every team will have to bring its own music track for the walk.</li>
+                                        <li>Every theme can be taken up by a maximum of 2 teams on a first come first serve basis.</li>
                                     </ul>
                                     <p class=" para-dlg-3">Judgement Criteria:</p>
                                     <p class=" para-dlg-2">The teams will be judged on the basis of the following:</p>
@@ -300,6 +305,17 @@
                                         <li>Interaction with the audience</li>
 
                                     </ul>
+                                    <p></p>
+                                    <p class=" para-dlg-3">Contact:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Azazul -<a href="tel:+918457867856">8457867856</a> </li>
+                                        <li>Monalisha - <a href="tel:+919348328210">9348328210</a></li>
+                                        <li>Satya - <a href="tel:+919040583814">9040583814</a></li>
+                                        <li>Poojarani - <a href="tel:+916370873252">6370873252</a></li>
+                                    </ul>
+                                    <p></p>
+                                    <p class=" para-dlg-2"><br>#Technovation2020<br>#KeepTheVibeAlive</p>
+
 
                                 </div>
                             </div>
@@ -388,9 +404,9 @@
                                     <p class=" para-dlg-3">Rules:</p>
                                     <ul class=" para-dlg-4">
                                         <li><b>Dance:-</b> It may be solo or duet or group performance having maximum 8 members.(Duration: 3-4 min)</li>
-                                        <li><b>Song:-</b> Songs of any language may be sung. (Duration: 2-3 min).</li>
+                                        <li><b>Song:-</b> Songs of any language may be sung. (Duration: 3-4 min).</li>
                                         <li><b>Instrumental:-</b> All types of instruments are allowed.(Duration: 2-3 min)</li>
-                                        <li><b>Act:-</b> Mono act or skit can be performed. (Duration: 3-5 min)</li>
+                                        <li><b>Act:-</b> Mono act or skit can be performed. (Duration: 3-4 min)</li>
                                         <li><b>Band Performance</b></li>
                                     </ul>
                                 </div>
@@ -515,7 +531,7 @@
                                     <ul class=" para-dlg-4">
                                         <li>Any pre-recorded or live music can be used for the performance.</li>
                                         <li>Music for the performance must be submitted in advance.</li>
-                                        <li>Props can be used.</li>
+                                        <li>Random Props will be provided on the spot to be used for the performance.</li>
                                         <li>Team members can be boys, girls, or mix.</li>
                                         <li>The decision taken by the organisers is final and binding for the performers.</li>
                                         <li>Any kind of misbehaviour will lead to direct disqualification.</li>
