update event spectacolo

--- a/events.html
+++ b/events.html
@@ -399,16 +399,48 @@
                                 <br>
                                 <div class="ui-widget-content content">
                                     <p></p>
-                                    <p class=" para-dlg-2"><i>“The entire world ‘s a stage”</i>, they say. For the people who believe this , for the people with passion ans obsession, we have the right stage for you!. Be it comedy, mimicry, acting, magic, dance or any quirky
-                                        thing you are passionately curious about, we have the stage ready for you!. Give the crowd and the judges the trime of their lives.</p>
+                                    <p class=" para-dlg-2">
+                                        <a href="javascript:void(0)"></a><i>"The entire world's a stage"</i>, they say. For the people who believe this , for the people with passion and obsession, we have the right stage for you! Be it comedy, mimicry, acting, magic, dance or any
+                                        quirky thing you are passionately curious about, we have the stage ready for you! Give the crowd the time of their lives.</p>
+                                    <p class=" para-dlg-2">Spectacolo-di-talenti brings the opportunity to make your move.</p>
+                                    <p class=" para-dlg-3">Description:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li> Dance:- It may be solo or duet or group performance having maximum 8 members.(Duration: 3-4 min)</li>
+                                        <li>Song:- Songs of any language may be sung. (Duration: 3-4 min).</li>
+                                        <li>Instrumental:- All types of instruments are allowed. (Duration: 3-4 min)</li>
+                                        <li>Act:- Mono act or skit can be performed. (Duration: 3-4 min)</li>
+                                        <li>Band Performance(Duration: 3-4 min)</li>
+                                    </ul>
+
                                     <p class=" para-dlg-3">Rules:</p>
                                     <ul class=" para-dlg-4">
-                                        <li><b>Dance:-</b> It may be solo or duet or group performance having maximum 8 members.(Duration: 3-4 min)</li>
-                                        <li><b>Song:-</b> Songs of any language may be sung. (Duration: 3-4 min).</li>
-                                        <li><b>Instrumental:-</b> All types of instruments are allowed.(Duration: 2-3 min)</li>
-                                        <li><b>Act:-</b> Mono act or skit can be performed. (Duration: 3-4 min)</li>
-                                        <li><b>Band Performance</b></li>
+                                        <li> The entry fee per person will be Rs 50/-</li>
+                                        <li>Time limit for every performance must be strictly within 3 - 4 minutes. </li>
+                                        <li>Any kind of talent may be showcased on the stage, be it comedy, mimicry, acting, magic, dance, etc.</li>
+                                        <li>The contestants need to submit their music track to the coordinators in advance.</li>
+                                        <li>Use of props is allowed.</li>
+                                        <li>Requirements of any sort must be informed well before hand.</li>
+                                        <li>Use of fire/water/smoke in any form is not allowed.</li>
+                                        <li>The decision of the judges will be final and binding in all cases.</li>
+                                        <li>Organizers have full authority to disqualify the participation in case of any discrepancy.</li>
                                     </ul>
+                                    <p class=" para-dlg-3">Judgement Criteria:</p>
+                                    <p class=" para-dlg-2"> Participants will be judged on the basis of the following :</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Skill and Creativity </li>
+                                        <li>Presentation </li>
+                                    </ul>
+                                    <p class=" para-dlg-3"> Contact:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Prasant - <a href="tel:+919078824629">9078824629</a></li>
+                                        <li>Jhalsa - <a href="tel:+918598950109">8598950109</a></li>
+                                        <li>Kaushik - <a href="tel:+918328820950">8328820950</a></li>
+                                        <li>Poojarani - X<a href="tel:+918328820950">8328820950</a></li>
+                                    </ul>
+                                    <p></p>
+                                    <p class=" para-dlg-2"><br>#Technovation2020<br>#KeepTheVibeAlive</p>
+
+
                                 </div>
                             </div>
                         </div>
