--- a/theme.html
+++ b/theme.html
@@ -54,6 +54,9 @@
                 <a href="./gallery.html"><i class="fa fa-picture-o fa-icon"></i> Gallery</a>
             </li>
             <li>
+                <a href="./registration.html"><i class="fa fa-user-plus fa-icon"></i> Registration</a>
+            </li>
+            <li>
                 <a href="./sponsor.html"><i class="fa fa-handshake-o fa-icon"></i> Sponsors</a>
             </li>
             <li>
