--- a/contactus.html
+++ b/contactus.html
@@ -59,6 +59,9 @@
                         <a class="btn-nav raise" href="faqs.html">FAQs</span></a>
                     </li>-->
                     <li class="nav-item">
+                        <a class="btn-nav raise" href="registration.html">Registration</span></a>
+                    </li>
+                    <li class="nav-item">
                         <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
                     </li>
