--- a/events.html
+++ b/events.html
@@ -66,6 +66,9 @@
                         <a class="btn-nav raise" href="faqs.html">FAQs</a>
                     </li>-->
                     <li class="nav-item">
+                        <a class="btn-nav raise" href="registration.html">Registration</span></a>
+                    </li>
+                    <li class="nav-item">
                         <a class="btn-nav raise" href="sponsor.html">Sponsors</a>
 
                     </li>
