--- a/sponsor.html
+++ b/sponsor.html
@@ -51,6 +51,9 @@
                 <!--<li class="nav-item">
                     <a class="btn-nav raise" href="faqs.html">FAQs</span></a>
                 </li>-->
+                <li class="nav-item">
+                    <a class="btn-nav raise" href="registration.html">Registration</span></a>
+                </li>
                 <li class="nav-item active">
                     <a class="btn-nav text-white" href="#">Sponsors <span class="sr-only">(current)</span></a>
 
