--- a/events.html
+++ b/events.html
@@ -612,6 +612,7 @@
                                     <p class=" para-dlg-2">A game in which a team has to complete a series of tasks within 2 days of fest and the one team which will report us,will win.</p>
                                     <p class=" para-dlg-2">**Participants have to take photo or video as proof to show while reporting.</p>
                                     <p class=" para-dlg-2"><b>Judgement:</b> The first team to report with all the tasks done will win.</p>
+                                    <p class=" para-dlg-2">In case every team fails to complete all the tasks given, then the team with most number of tasks completed will win the event.</p>
                                     <p class=" para-dlg-3">No.of players per team: 5</p>
 
                                 </div>
@@ -756,8 +757,25 @@
                                     <p class=" para-dlg-2"> Who doesn't love gully cricket? School and college life is virtually incomplete without a cricket match in the streets.</p>
                                     <p class=" para-dlg-2">With strange rules and regulations, gully cricket is excellent entertainment and an integral part of every Indian's childhood.</p>
                                     <p class=" para-dlg-2">Take a break from the craze of online games and come to feel the emotions of gully cricket.</p>
-                                    <p class=" para-dlg-2"> <b>Judgement:</b> Matches will be played in league style. All the matches will be knock out. The team that wins the final is declared the winner</p>
-                                    <p class=" para-dlg-3"> No.of players per team: 5</p>
+                                    <!-- <p class=" para-dlg-2"> <b>Judgement:</b> Matches will be played in league style. All the matches will be knock out. The team that wins the final is declared the winner</p> -->
+                                    <p class=" para-dlg-3">Rules:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>All the matches will be knock out.</li>
+                                        <li>Number of players per team:5</li>
+                                        <li>1st over will be a magic over( runs scored will be doubled).</li>
+                                        <li>One drop one hand out rule.</li>
+                                        <li>Winner & runners-up both will be awarded with prize.</li>
+                                        <li>Entry fee is Rs 50 and Re-entry is Rs 30.</li>
+                                    </ul>
+                                    <p class=" para-dlg-3"> Contact:</p>
+                                    <ul class=" para-dlg-4">
+                                        <li>Jyotishman Maharana - <a href="tel:+917008377271">7008377271</a></li>
+                                    </ul>
+                                    <p></p>
+                                    <p class=" para-dlg-2"><br>#Technovation2020<br>#KeepTheVibeAlive</p>
+
+
+
                                 </div>
 
                             </div>
@@ -875,6 +893,7 @@
                                 <br>
                                 <div class="ui-widget-content content">
                                     <p></p>
+                                    <p class=" para-dlg-1"><i>One who seeks enlightenment must learn to see what lies beyond... <b>"The Code"</b></i></p>
                                     <p class=" para-dlg-2">This is an event to test the deciphering abilities of participants. Participants will need to solve some mind-boggling puzzles to get to the treasure. This event will be conducted in two phases. Only the best one will
                                         win the prize</p>
                                     <p class=" para-dlg-3">Specification:</p>
