--- a/sponsor.html
+++ b/sponsor.html
@@ -91,12 +91,13 @@
                 </div>
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/bharat_petroleum.png" alt="">
+                        <img class="sponsor-image" src="images/sponsors/tcs.png" alt="">
                         <div class="sponsor-name">
-                            BHARAT PETROLEUM
+                            TCS
                         </div>
                     </div>
                 </div>
+
 
             </div>
             <!-- row 3 -->
@@ -120,7 +121,16 @@
             </div> -->
             <!-- row 4 -->
             <div class="row">
+
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/bharat_petroleum.png" alt="">
+                        <div class="sponsor-name">
+                            BHARAT PETROLEUM
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/jt.png" alt="">
                         <div class="sponsor-name">
@@ -128,7 +138,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+
+            </div>
+            <!-- row 5 -->
+            <div class="row">
+
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/lit.jpg" alt="">
                         <div class="sponsor-name">
@@ -136,10 +151,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- row 5 -->
-            <div class="row">
-                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/interface.png" alt="">
                         <div class="sponsor-name">
@@ -147,14 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
-                    <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/salaam_namaste.png" alt="">
-                        <div class="sponsor-name">
-                            SALAAM NAMASTE
-                        </div>
-                    </div>
-                </div>
+
             </div>
             <!-- row 6 -->
             <!-- <div class="row">
@@ -196,7 +201,16 @@
             </div> -->
             <!-- rpw 8 -->
             <div class="row">
+
                 <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/salaam_namaste.png" alt="">
+                        <div class="sponsor-name">
+                            SALAAM NAMASTE
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/richard.jpg" alt="">
                         <div class="sponsor-name">
@@ -204,7 +218,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+
+
+            </div>
+
+            <!-- row 9 -->
+            <div class="row">
+
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/naturals.jpg" alt="">
                         <div class="sponsor-name">
@@ -212,11 +233,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <!-- row 9 -->
-            <div class="row">
-                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/greentrends.png" alt="">
                         <div class="sponsor-name">
@@ -224,7 +241,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+
+
+
+            </div>
+            <!-- ROW 10 -->
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/inkstories.png" alt="">
                         <div class="sponsor-name">
@@ -232,10 +255,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- ROW 10 -->
-            <div class="row">
-                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
                         <img class="sponsor-image" src="images/sponsors/studio11.png" alt="">
                         <div class="sponsor-name">
