some more event posters added

--- a/sponsor.html
+++ b/sponsor.html
@@ -273,6 +273,26 @@
                 </div> -->
             </div>
 
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/weirdo.png" alt="">
+                        <div class="sponsor-name">
+                            WEIRDO
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/studio11.png" alt="">
+                        <div class="sponsor-name">
+                            STUDIO 11
+                        </div>
+                    </div>
+                </div> -->
+
+            </div>
+
         </div>
 
     </div>
