--- a/theme.html
+++ b/theme.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <script>
         function openNav() {
             if (screen.width > 520) {
@@ -75,15 +76,22 @@
 
     <div class="container-fluid">
         <div class="theme-heading-card-1">
-            <img class="wizard-logo" src="images/wizard-logo.png"></img>
+            <!-- <img class="wizard-logo" src="images/wizard-logo.png"></img> -->
             <div class="theme-heading">
-                THEME
+                <div class="rotating-power-wheel">
+                    <img class="power-wheel" src="./images/wh2.svg" />
+                </div>
+                <div class="theme-heading-text">
+                    A Saga Of The Arcane
+                </div>
+
             </div>
             <div class="theme-content">
-                <p>
+                <!-- <p>
                     hgkjvkjhxdhvbchxjhbkj ihvidizh giidhzsiughv d fgiu dius hiug hiuadhui ahghdia adgio iodjigj iadjiog hiohdsihioghd ihgisiodhgiohaiod giohahdighiodhghahishegio gh ehiogha ehgea hg etiug eai oi hp whrpr qwprha wht aeog e
-                </p>
+                </p> -->
             </div>
+            19
 
         </div>
 
@@ -94,7 +102,7 @@
     <br>
     <br>
 
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div class="theme-heading-card-2">
             <div class="theme-heading">TIMELINE</div>
             <div class="timeline">
@@ -136,7 +144,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
