--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="ex1"></div>
             <div class="ex2"></div>
             <div class="ex3"></div>
-            <a href="./index-fut.html"><button class="c-item btn btn-outline-primary wow zoomIn"><b>TAKE A TOUR</b></button></a>
+            <a href="./theme.html"><button class="c-item btn btn-outline-primary wow zoomIn"><b>TAKE A TOUR</b></button></a>
         </div>
 
         <img src="./images/tech2.png" style="display: none;">
