--- a/theme.html
+++ b/theme.html
@@ -84,6 +84,9 @@
                 <div class="theme-heading-text">
                     A Saga Of The Arcane
                 </div>
+                <div class="theme-heading-tx1">A Saga</div>
+                <div class="theme-heading-tx2">Of</div>
+                <div class="theme-heading-tx3">The Arcane</div>
 
             </div>
             <div class="theme-content">
