--- a/events.html
+++ b/events.html
@@ -114,7 +114,8 @@
                                 <div class="item5">
                                     <img class="item-img" src="images/cultural/star-night.jpg">
                                     <div class="item9"></div>
-                                    <div class="item10"><i class="fa fa-clock-o"></i></div>
+                                    <div class="item10"> 15<br><span style="font-size: 0.6em;">Mar</span>
+                                        <!--<i class="fa fa-clock-o"></i>--></div>
                                 </div>
 
                                 <div class="item6 "></div>
