--- a/sponsor.html
+++ b/sponsor.html
@@ -282,11 +282,51 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/teeshood.jpg" alt="">
+                        <div class="sponsor-name">
+                            TEESHOOD
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/tiaamo.png" alt="">
+                        <div class="sponsor-name">
+                            TIAAMO
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/sixit.png" alt="">
+                        <div class="sponsor-name">
+                            SIXIT SPORTS
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-1">
+                    <div class="sponsor-container">
+                        <img class="sponsor-image" src="images/sponsors/careerlauncher.jpg" alt="">
+                        <div class="sponsor-name">
+                            CAREER LAUNCHER
+                        </div>
+                    </div>
+                </div>
                 <!-- <div class="col-md-6 col-sm-12 col-lg-4 offset-lg-2">
                     <div class="sponsor-container">
-                        <img class="sponsor-image" src="images/sponsors/studio11.png" alt="">
+                        <img class="sponsor-image" src="images/sponsors/sixit.jpg" alt="">
                         <div class="sponsor-name">
-                            STUDIO 11
+                            SIXIT SPORTS
                         </div>
                     </div>
                 </div> -->
